chore(website): update commands and text to reflect mandatory input file

--- a/website/index.html
+++ b/website/index.html
@@ -219,7 +219,7 @@
                          </div>
                          <div class="feature-terminal">
                             <div class="mb-2">Run interrupted at 85%...</div>
-                            <div class="text-terracotta">$ kothaset generate --resume</div>
+                            <div class="text-terracotta">$ kothaset generate --resume -i topics.txt</div>
                             <div class="mt-1">Resuming from ID #8501</div>
                         </div>
                     </div>
@@ -323,7 +323,7 @@
                             <div class="step-number">2</div>
                             <div>
                                 <h3 class="step-title">Seed</h3>
-                                <p class="step-desc">Optionally add a list of topics to spread your dataset across different subjects.</p>
+                                <p class="step-desc">Provide a list of topics to spread your dataset across different subjects.</p>
                             </div>
                         </div>
                         
