--- a/website/index.html
+++ b/website/index.html
@@ -422,7 +422,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>© 2026 Shanto Islam. MIT License.</p>
+                <p>© 2026 Shanto Islam. Apache 2.0 License.</p>
                 <div class="flex gap-4">
                     <span>v0.0.1</span>
                     <span>Go / Node</span>
