feat(website): dynamic npm version fetching

--- a/website/index.html
+++ b/website/index.html
@@ -424,7 +424,7 @@
             <div class="footer-bottom">
                 <p>© 2026 Shanto Islam. Apache 2.0 License.</p>
                 <div class="flex gap-4">
-                    <span>v0.0.1</span>
+                    <span class="version-text">v0.0.1</span>
                     <span>Go / Node</span>
                 </div>
             </div>
